--- a/Kconfig
+++ b/Kconfig
@@ -2,7 +2,12 @@
 mainmenu "LunSystem Build Menu"
 
 # Sub Menu For Howling OS Assets
+config HOWLINGOS_ENABLE
+    bool "Howling OS"
+    default n
+
 menu "Howling OS"
+    depends on HOWLINGOS_ENABLE
     config HOWLING_INSTALL_COMPILE
         bool "Howling Install"
         default n
